# AI-Nuclear-Fusion-2022

./: .gitignore  CMakeLists.txt  Makefile  OSFMountRamdriveR.cmd  README.md  TS3.cpp  calcEBV_FFT.cpp  cl_code.cpp  info.csv  log.csv  save.cpp
include/: traj.h  traj_physics.h
